# labs-connorokane-kainos

./: .gitignore  Dockerfile  Jenkinsfile_CNP  Jenkinsfile_nightly  Jenkinsfile_parameterized  README.md  catalog-info.yaml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  stale.yml
app/: main.py
app/routers/: root.py
charts/labs-ConnorOKane-Kainos/: Chart.yaml  values.yaml
infrastructure/: providers.tf
tests/functional/: test_functional.py
tests/smoke/: test_smoke.py
tests/unit/: test_root.py
