[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "labs-ConnorOKane-Kainos"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # "azure-monitor-opentelemetry",  # Uncomment to enable Application Insights
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
exclude-newer = "7 days"
